# robot_robot_microtruth

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml
docs/: architecture.md  demo-runbook.md  hardware-integration.md  protocol.md  threat-model.md
scripts/: run_attack_demo.sh  run_demo.sh
src/trust_before_touch/: __init__.py  __main__.py  config.py  constants.py  state_machine.py
src/trust_before_touch/api/: __main__.py  app.py
src/trust_before_touch/cli/: main.py
src/trust_before_touch/control/: loop.py
src/trust_before_touch/dashboard/templates/: index.html
src/trust_before_touch/hardware/: factory.py  interfaces.py  lerobot_so101.py  lerobot_so101_stub.py  simulated.py
src/trust_before_touch/models/: api.py  events.py  protocol.py  robot.py
src/trust_before_touch/persistence/: repository.py
src/trust_before_touch/protocol/: challenges.py  session_manager.py
src/trust_before_touch/scoring/: trust.py
src/trust_before_touch/simulation/: engine.py
tests/: conftest.py  test_api.py  test_attack_detection.py  test_challenges.py  test_config.py  test_hardware_backend.py  test_lerobot_import_compat.py  test_realtime_control.py  test_scoring.py  test_simulation_deterministic.py  test_state_machine.py
