[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-before-touch-so101"
version = "0.2.0"
description = "Real-time robot manipulation and control for SO-101 arms with LeRobot integration and PCS verification"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "rvazdev-ex" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "typer>=0.12.3",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
lerobot = [
  "lerobot>=0.1.0",
  "opencv-python>=4.8.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[project.scripts]
trust-before-touch = "trust_before_touch.cli.main:app"
trust-before-touch-api = "trust_before_touch.api.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trust_before_touch = ["dashboard/templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "src"
plugins = []

[[tool.mypy.overrides]]
module = ["uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["lerobot", "lerobot.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
